--- a/helm/stackrox-mcp/values.yaml
+++ b/helm/stackrox-mcp/values.yaml
@@ -12,6 +12,11 @@ auth:
   jwtSecret:
     secretName: central-tls
 
+customRoutes:
+  enabled: false
+  routes:
+    routes: []
+
 service:
   type: ClusterIP
   port: 8000
